[gd_scene load_steps=3 format=2]

[ext_resource path="res://HostLobby/HostLobby.gd" type="Script" id=1]
[ext_resource path="res://MenuStyle.tres" type="Theme" id=2]

[node name="HostLobby" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HereIsLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -173.5
margin_top = -250.0
margin_right = 173.5
margin_bottom = -211.0
text = "Here is your IP address:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="IpAddressLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -90.0
margin_top = 200.0
margin_right = 90.0
margin_bottom = 239.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InstructionParagraph" type="RichTextLabel" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -265.0
margin_top = -125.0
margin_right = 265.0
margin_bottom = 125.0
text = "	To play you must connect other devices to this one. Input the IP address above wehn connecting other device to this one. Connected devices will appear below."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AllPlayersConnectedButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -167.0
margin_top = 150.0
margin_right = 167.0
margin_bottom = 205.0
text = "All Players Connected"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Disconnect" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -89.5
margin_top = 250.0
margin_right = 89.5
margin_bottom = 305.0
text = "Disconnect"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HelpButton" type="Button" parent="."]
margin_left = 30.0
margin_top = 730.0
margin_right = 60.0
margin_bottom = 760.0
text = "?"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HelpButtonLabel" type="Label" parent="HelpButton"]
margin_left = 37.0
margin_top = 8.0
margin_right = 77.0
margin_bottom = 22.0
text = "Need Help?"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HelpPopup" type="WindowDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -320.0
margin_top = -232.5
margin_right = 320.0
margin_bottom = 232.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HelpText" type="RichTextLabel" parent="HelpPopup"]
margin_right = 640.0
margin_bottom = 200.0
text = "Please use the given IP address to connect other devices to the server. To join on other devices, click \"join a server\", then enter the IP address on this screen, and finally click \"join\"."

[node name="HideHelpButton" type="Button" parent="HelpPopup"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -41.0
margin_top = -27.5
margin_right = 41.0
margin_bottom = 27.5
text = "okay"

[node name="DevicesConnectedAlert" type="WindowDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -320.0
margin_top = -232.5
margin_right = 320.0
margin_bottom = 232.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayersConnected" type="Label" parent="DevicesConnectedAlert"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -320.0
margin_top = 20.0
margin_right = 320.0
margin_bottom = 69.0
text = "You have 0 other devices connected"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Explanation" type="Label" parent="DevicesConnectedAlert"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -320.0
margin_top = -132.5
margin_right = 320.0
margin_bottom = 32.5
text = "Disconnecting as the host will also disconnect the other devices
and will restart the connection process.
Continue?"
align = 1
autowrap = true

[node name="GoBackButton" type="Button" parent="DevicesConnectedAlert"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -98.5
margin_top = -7.5
margin_right = 98.5
margin_bottom = 47.5
text = "No, Go Back"

[node name="ContinueButton" type="Button" parent="DevicesConnectedAlert"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -105.0
margin_top = 82.5
margin_right = 105.0
margin_bottom = 137.5
text = "Yes, continue"

[node name="OtherDevicesLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -215.0
margin_top = -19.5
margin_right = 215.0
margin_bottom = 19.5
text = " "

[connection signal="pressed" from="AllPlayersConnectedButton" to="." method="_on_AllPlayersConnectedButton_pressed"]
[connection signal="pressed" from="Disconnect" to="." method="_on_Disconnect_pressed"]
[connection signal="pressed" from="HelpButton" to="." method="_on_HelpButton_pressed"]
[connection signal="pressed" from="HelpPopup/HideHelpButton" to="." method="_on_HideHelpButton_pressed"]
[connection signal="pressed" from="DevicesConnectedAlert/GoBackButton" to="." method="_on_GoBackButton_pressed"]
[connection signal="pressed" from="DevicesConnectedAlert/ContinueButton" to="." method="_on_ContinueButton_pressed"]
